--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 
                 <p class="TituloFooter">assisthiago2303@gmail.com</p> <br><br>
             </div>
-            <p>&#169; 2020 copyright all right reserved</p>
+            <p>&#169; 2020 copyright all rights reserved</p>
         </footer>
 
         
