--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     
                     <div>
                         <h2 class="subtitulo">Um pouco da minha pessoa...</h2>
-                        <p class="texto">Sou bacharel em Ciência da Computação um e grande entusiasta por tecnologia, adoro programar e dedicar meu tempo desenvolvendo sistemas. Apesar dessa cara de nerd gosto de andar de skate e sair com os amigos no tempo livre.
+                        <p class="texto">Sou bacharel em Ciência da Computação e um grande entusiasta por tecnologia, adoro programar e dedicar meu tempo desenvolvendo sistemas. Apesar dessa cara de nerd gosto de andar de skate e sair com os amigos no tempo livre.
                             
                             </p>           
                     </div>                                   
