--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     
                     <div>
                         <h2 class="subtitulo">Um pouco da minha pessoa...</h2>
-                        <p class="texto">Sou bacharel em Ciência da Computação e um grande entusiasta por tecnologia, adoro programar e dedicar meu tempo desenvolvendo sistemas. Apesar dessa cara de nerd gosto de andar de skate e sair com os amigos no tempo livre.
-                            
+                        <p class="texto">Sou bacharel em Ciência da Computação e um grande entusiasta por tecnologia, adoro programar e dedicar meu tempo desenvolvendo sistemas. Apesar dessa cara de nerd gosto de andar de skate e sair com os amigos no tempo livre.<br><br>
+                                Estagiei dois anos no Ministério da Economia onde auxiliei no desenvolvimento e implementação de scripts de web scrapping para soluções internas, tais como automação de atividades rotineiras de envio de emails, consulta de agendas e busca de dados.
                             </p>           
                     </div>                                   
                 </div>
