--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
            
-                                <span class="skills__name">MySQL</span>
+                                <span class="skills__name">MySQL // PostgreSQL</span>
                             </div>
                             <div class="skills__bar skills__js">
                                 
