--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         
                         </ul>
                      <ul>   
-                    <li class="texto" style="color: #ffffff;" > Foi feito o desenvolvimento de um aplicativo de fármacias que através de Geolocalização mostra todas as drograrias próximas do usuário e disponibiliza o catálogo de produtos e promoções das comércios farmacêuticos parceiras. <br>  O projeto recebeu a nota máxima (SS).</li>
+                    <li class="texto" style="color: #ffffff;" > Foi feito o desenvolvimento de um aplicativo de farmácias que através de Geolocalização mostra todas as drograrias próximas do usuário e disponibiliza o catálogo de produtos e promoções das comércios farmacêuticos parceiras. <br>  O projeto recebeu a nota máxima (SS).</li>
                 </ul>
                     <ul> 
                     <li> <a href="https://github.com/thiagoassisk8/pharma_off" target="blank" style="color: #ffffff";>    Clique aqui para ver o Código Fonte</a></li>
